k3s/argocd/argocd-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`argocd.local.io`)
      priority: 10
      services:
        - name: argocd-server
          port: 80
          scheme: http
          serversTransport: skipverify
    - kind: Rule
      match: Host(`argocd.local.io`) && Headers(`Content-Type`, `application/grpc`)
      priority: 11
      services:
        - name: argocd-server
          port: 80
          scheme: h2c
            #serversTransport: skipverify
  tls: {}
